[package]
name = "hwx"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
log = "0.4"
cfg-if = "1.0"
anyhow = "1.0"
num-traits = "0.2"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"

[features]
# Enables AVX-512 implementations (requires nightly Rust)
hwx-nightly = []
# Forces scalar implementations (useful for debugging)
disable-hwx = []

[build-dependencies]
cc = "1.0"
sha2 = "0.10"

[dev-dependencies]
unicode-segmentation = "1.11"
